--- a/Simulation - system dynamics (Python).ipynb
+++ b/Simulation - system dynamics (Python).ipynb
@@ -8,7 +8,7 @@
     "\n",
     "System dynamics models work on stocks and flows between the stocks.\n",
     "To get an idea about this, see how [MONIAC](https://www.youtube.com/watch?v=rVOhYROKeu4) works.\n",
-    "See the documentation of [btpk](https://bptk.transentis.com/en/latest/docs/sd-dsl/sd-dsl.html)."
+    "See the documentation of [btpk](https://bptk.transentis.com/sd-dsl/simple_python_library_sd_dsl/simple_python_library_sd_dsl.html)."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "## time starts from 0 and continues until 20\n",
     "\n",
-    "model = Model( starttime=0, stoptime=300, dt=1)\n",
+    "model = Model( starttime=0, stoptime=20, dt=1)\n",
     "\n",
     "## we have three stocks (people healthy, people sick and people killed)\n",
     "healthy = model.stock(\"healthy\")\n",
@@ -60,11 +60,9 @@
     "new_sick_people = model.flow(\"new_sick_people\")\n",
     "new_sick_people.equation = healthy * infection - 1\n",
     "\n",
-    "\n",
-    "healthy.equation = - new_sick_people\n",
+    "#healthy.equation = - new_sick_people\n",
     "killed.equation = new_dead_people\n",
-    "sick.equation = new_sick_people - new_dead_people\n",
-    "\n"
+    "sick.equation = new_sick_people - new_dead_people\n"
    ]
   },
   {
@@ -126,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
